rectified the django tag error with patrick adding the django tag to the static img files changed some settings in the settings.py of the project

--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -28,7 +28,7 @@
 													data-thumb="//acerealestates.ng/wp-content/uploads/2022/10/2Bed-Terrace-3D.-scaled-50x100.jpg"
 													data-duration="7000ms" data-anim="adpr:false;" data-in="o:0;"
 													data-out="a:false;">
-													<img src="wp-content/plugins/revslider/public/assets/assets/dummy.png"
+													<img src="{% static 'wp-content/plugins/revslider/public/assets/assets/dummy.png' %}"
 														alt="" title="2Bed Terrace 3D." width="2560" height="1440"
 														class="rev-slidebg tp-rs-img rs-lazyload"
 														data-lazyload="//acerealestates.ng/wp-content/uploads/2022/10/2Bed-Terrace-3D.-scaled.jpg"
@@ -94,7 +94,7 @@
 													data-thumb="//acerealestates.ng/wp-content/uploads/2022/10/3Bed-Terrace_3bed-3d-3.-scaled-50x100.jpg"
 													data-duration="7000ms" data-anim="adpr:false;" data-in="o:0;"
 													data-out="a:false;">
-													<img src="wp-content/plugins/revslider/public/assets/assets/dummy.png"
+													<img src="{% static 'wp-content/plugins/revslider/public/assets/assets/dummy.png' %}"
 														alt="" title="3Bed Terrace_3bed 3d 3." width="2560"
 														height="1440" class="rev-slidebg tp-rs-img rs-lazyload"
 														data-lazyload="//acerealestates.ng/wp-content/uploads/2022/10/3Bed-Terrace_3bed-3d-3.-scaled.jpg"
@@ -160,7 +160,7 @@
 													data-thumb="//acerealestates.ng/wp-content/uploads/2022/10/2Bed-Terrace-3D_2bed-3d-4.-scaled-50x100.jpg"
 													data-duration="7000ms" data-anim="adpr:false;" data-in="o:0;"
 													data-out="a:false;">
-													<img src="wp-content/plugins/revslider/public/assets/assets/dummy.png"
+													<img src="{% static 'wp-content/plugins/revslider/public/assets/assets/dummy.png' %}"
 														alt="" title="2Bed Terrace 3D,_2bed 3d 4." width="2560"
 														height="1440" class="rev-slidebg tp-rs-img rs-lazyload"
 														data-lazyload="//acerealestates.ng/wp-content/uploads/2022/10/2Bed-Terrace-3D_2bed-3d-4.-scaled.jpg"
@@ -334,7 +334,7 @@
 											<div class="row number-block-one-outer justify-content-center">
 												<div class="col-lg-4 col-md-6 col-sm-6 m-b30">
 													<div class="number-block-one animate-in-to-top">
-														<img src="wp-content/uploads/2021/06/projects-portrait7.jpg"
+														<img src="{% static 'wp-content/uploads/2021/06/projects-portrait7.jpg' %}"
 															alt="img">
 														<div class="figcaption bg-white text-center p-a20">
 															<h4 class="m-a0">Property Development</h4>
@@ -347,7 +347,7 @@
 												</div>
 												<div class="col-lg-4 col-md-6 col-sm-6 m-b30">
 													<div class="number-block-one animate-in-to-top">
-														<img src="wp-content/uploads/2021/06/projects-portrait1.jpg"
+														<img src="{% static 'wp-content/uploads/2021/06/projects-portrait1.jpg' %}"
 															alt="img">
 														<div class="figcaption bg-white text-center p-a20">
 															<h4 class="m-a0">Refurbishment</h4>
@@ -360,7 +360,7 @@
 												</div>
 												<div class="col-lg-4 col-md-6 col-sm-6 m-b30">
 													<div class="number-block-one animate-in-to-top">
-														<img src="wp-content/uploads/2021/06/pic3.jpg" alt="img">
+														<img src="{% static 'wp-content/uploads/2021/06/pic3.jpg' %}" alt="img">
 														<div class="figcaption bg-white text-center p-a20">
 															<h4 class="m-a0">General Construction</h4>
 														</div>
@@ -455,7 +455,7 @@
 																		href="projects/vision-city/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2023/01/WhatsApp-Image-2023-01-23-at-1.58.21-PM-300x300.jpg"
+																	<img src="{% static 'wp-content/uploads/2023/01/WhatsApp-Image-2023-01-23-at-1.58.21-PM-300x300.jpg' %}"
 																		alt="">
 																	<a href="projects/vision-city/index.html"></a>
 																</div>
@@ -492,7 +492,7 @@
 																		aria-hidden="true"></i><a
 																		href="projects/number-31/index.html"></a></div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2023/01/WhatsApp-Image-2023-01-23-at-1.52.30-PM-300x300.jpg"
+																	<img src="{% static 'wp-content/uploads/2023/01/WhatsApp-Image-2023-01-23-at-1.52.30-PM-300x300.jpg' %}"
 																		alt="">
 																	<a href="projects/number-31/index.html"></a>
 																</div>
@@ -530,7 +530,7 @@
 																		href="projects/prime-city-estate/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2022/10/image3-300x300.jpg"
+																	<img src="{% static 'wp-content/uploads/2022/10/image3-300x300.jpg' %}"
 																		alt="">
 																	<a href="projects/prime-city-estate/index.html"></a>
 																</div>
@@ -569,7 +569,7 @@
 																		href="projects/prestige-green-estate-ii/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2022/10/WhatsApp-Image-2022-10-14-at-4.51.49-PM-300x300.jpg"
+																	<img src="{% static 'wp-content/uploads/2022/10/WhatsApp-Image-2022-10-14-at-4.51.49-PM-300x300.jpg' %}"
 																		alt="">
 																	<a
 																		href="projects/prestige-green-estate-ii/index.html"></a>
@@ -609,7 +609,7 @@
 																		href="projects/bethel-island/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2021/06/image5-300x300.png"
+																	<img src="{% static 'wp-content/uploads/2021/06/image5-300x300.png' %}"
 																		alt="">
 																	<a href="projects/bethel-island/index.html"></a>
 																</div>
@@ -647,7 +647,7 @@
 																		href="projects/mo-apartments/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2021/06/Evening-284x300.png"
+																	<img src="{% static 'wp-content/uploads/2021/06/Evening-284x300.png' %}"
 																		alt="">
 																	<a href="projects/mo-apartments/index.html"></a>
 																</div>
@@ -685,7 +685,7 @@
 																		href="projects/prestige-green-phase-1/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2022/10/WhatsApp-Image-2022-10-19-at-10.56.45-AM-300x300.jpg"
+																	<img src="{% static 'wp-content/uploads/2022/10/WhatsApp-Image-2022-10-19-at-10.56.45-AM-300x300.jpg' %}"
 																		alt="">
 																	<a
 																		href="projects/prestige-green-phase-1/index.html"></a>
@@ -724,7 +724,7 @@
 																		href="projects/stallion-spring-2/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2022/10/WhatsApp-Image-2022-10-19-at-10.56.17-AM1-300x300.jpg"
+																	<img src="{% static 'wp-content/uploads/2022/10/WhatsApp-Image-2022-10-19-at-10.56.17-AM1-300x300.jpg' %}"
 																		alt="">
 																	<a href="projects/stallion-spring-2/index.html"></a>
 																</div>
@@ -762,7 +762,7 @@
 																		href="projects/prestige-green-estate-phase-ii/index.html"></a>
 																</div>
 																<div class="eael-entry-thumbnail ">
-																	<img src="wp-content/uploads/2022/10/WhatsApp-Image-2022-10-19-at-10.56.17-AM-300x297.jpg"
+																	<img src="{% static 'wp-content/uploads/2022/10/WhatsApp-Image-2022-10-19-at-10.56.17-AM-300x297.jpg' %}"
 																		alt="">
 																	<a
 																		href="projects/prestige-green-estate-phase-ii/index.html"></a>
