changed some Ace to zaran also changed DEBUG to False

--- a/estate_project/templates/about-us.html
+++ b/estate_project/templates/about-us.html
@@ -9,7 +9,7 @@
 				<div class="banner-title-outer">
 					<div class="banner-title-name">
 						<h2 class="m-tb0">About Us</h2>
-						<p>Ace Real Estate is an award-winning and value-driven real estate development company with a tripartite value system that cuts across service delivery and customer satisfaction.</p>
+						<p>Zaran Real Estate is an award-winning and value-driven real estate development company with a tripartite value system that cuts across service delivery and customer satisfaction.</p>
 					</div>
 				</div>
 				<!-- BREADCRUMB ROW -->
@@ -51,7 +51,7 @@
 													<h3 class="m-t0 sx-tilte">Your dream, our commitment</h3>
 													<p>
 
-														Led by a passionate team, Ace Real Estate has grown to become
+														Led by a passionate team, Zaran Real Estate has grown to become
 														one of the major start-up real estate firms in the Nigerian real
 														estate sector in a space of two years.
 
@@ -110,7 +110,7 @@
 													class="number-block-two animate-in-to-top bdr-gray-light bdr-solid bdr-1">
 													<div class="figcaption bg-white  p-a30">
 														<h4 class="m-t0">Our Vision</h4>
-														<p>The Ace-Dream which is to become a leading icon in Nigeria
+														<p>The Zaran-Dream which is to become a leading icon in Nigeria
 															and Africa’s real estate industry through our commitment to
 															acquiring valuable properties easily accessible for just
 															anyone.</p>
@@ -222,7 +222,7 @@
 													</div>
 													<div class="col-lg-6 col-md-12	col-sm-12">
 														<div class="large-title-info">
-															<p>Ace Real Estate is an award winning and value driven real
+															<p>Zaran Real Estate is an award winning and value driven real
 																estate development company with a tripartite value
 																system that cut across service delivery, and customer
 																satisfaction.</p>
