--- a/estate_project/templates/footer.html
+++ b/estate_project/templates/footer.html
@@ -97,7 +97,7 @@
                                         href="contact-us/index.html">Support Center</a></li>
                                 <li id="menu-item-1044"
                                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1044"><a
-                                        href="http://dash.acerealestates.ng/login">Become an Ace Agent</a></li>
+                                        href="http://dash.acerealestates.ng/login">Become an Zaran Agent</a></li>
                             </ul>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                     <div class="col-lg-8 col-md-6 col-sm-12">
                         <div class="call-to-action-left">
                             <h5 class="text-uppercase m-b10 m-t0">SUBSCRIBE TO OUR NEWSLETTER!</h5>
-                            <span>Never Miss Anything From Ace Real Estate By Signing Up To Our Newsletter.</span>
+                            <span>Never Miss Anything From Zaran Real Estate By Signing Up To Our Newsletter.</span>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -135,9 +135,9 @@
                                         <div class="input-group">
                                             <input name="news-letter" class="form-control"
                                                 placeholder="ENTER YOUR EMAIL" type="text">
-                                            <span class="input-group-btn">
-                                                <button type="submit" class="site-button"><i class="fa fa-paper-plane-o"></i></button>
-                                            </span>
+                                                <span class="input-group-btn">
+                                                    <button type="submit" class="site-button"><i class="fa fa-paper-plane-o"></i></button>
+                                                </span>
                                         </div>
                                         <div class="status">loading...</div>
                                     </form>
@@ -155,7 +155,7 @@
         <div class="container">
             <div class="clearfix">
                 <div class="sx-footer-bot-center">
-                    <span class="copyrights-text">© 2022 Ace Real Estate. All rights reserved.</span>
+                    <span class="copyrights-text">© 2022 Zaran Real Estate. All rights reserved.</span>
                 </div>
             </div>
         </div>
