--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -470,7 +470,7 @@
 													<div class="col-xl-6 col-lg-6 col-md-12">
 														<div class="about-home-3 m-b30 bg-white">
 															<h3 class="m-t0 m-b20 sx-tilte">
-																The Ace - Dream
+																The Zaran - Dream
 															</h3>
 															<p>
 																To become a leading icon in Nigeria and Africa’s
@@ -614,7 +614,7 @@
 															<div class="col-lg-6 col-md-12 col-sm-12">
 																<div class="large-title-info">
 																	<p>
-																		Ace Real Estate is an award winning and
+																		Zaran Real Estate is an award winning and
 																		value driven real estate development company
 																		with a tripartite value system that cut
 																		across service delivery, and customer
