--- a/estate_project/templates/downloads.html
+++ b/estate_project/templates/downloads.html
@@ -8,7 +8,7 @@
 				<div class="banner-title-outer">
 					<div class="banner-title-name">
 						<h2 class="m-tb0">Downloads</h2>
-						<p>Ace Real Estate is an award-winning and value-driven real estate development company with a tripartite value system that cuts across service delivery and customer satisfaction.</p>
+						<p>Zaran Real Estate is an award-winning and value-driven real estate development company with a tripartite value system that cuts across service delivery and customer satisfaction.</p>
 					</div>
 				</div>
 				<!-- BREADCRUMB ROW -->
