modified:   estate_project/static/wp-content/themes/images/background/scale-top.html 	modified:   estate_project/static/wp-content/themes/inteshape/assets/css/owl.video.play.html 	modified:   estate_project/static/wp-content/uploads/about-us/About Us _ Ace.html 	modified:   estate_project/static/wp-content/uploads/about-us/pic4.jpg 	modified:   estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_1.html 	modified:   estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_3.html 	modified:   estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_4.html 	modified:   estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_5.html 	modified:   estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_6.html 	modified:   estate_project/staticfiles/wp-content/themes/images/background/cross-line2.html 	modified:   estate_project/staticfiles/wp-content/themes/images/background/scale-bottom.html 	modified:   estate_project/staticfiles/wp-content/themes/images/background/scale-top.html 	modified:   estate_project/staticfiles/wp-content/themes/inteshape/assets/css/owl.video.play.html 	modified:   estate_project/staticfiles/wp-content/uploads/about-us/About Us _ Ace.html 	modified:   estate_project/staticfiles/wp-content/uploads/about-us/pic4.jpg 	modified:   estate_project/templates/header.html 	modified:   estate_project/templates/index.html

--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -512,7 +512,7 @@
 															<div class="overlay-main bg-black opacity-04"></div>
 															<div class="video-section-inner">
 																<div class="video-section-content">
-																	<a href="https://www.youtube.com/watch?v=Llrl2xgdjLc"
+																	<a href="https://www.youtube.com/watch?v=1bvNBm4vCGs"
 																		class="mfp-video play-now">
 																		<i class="icon fa fa-play"></i>
 																		<span class="ripple"></span>
@@ -1286,7 +1286,7 @@
 									data-settings='{"ekit_we_effect_on":"none"}' data-widget_type="button.default">
 									<div class="elementor-widget-container">
 										<div class="elementor-button-wrapper">
-											<a href="https://www.youtube.com/channel/UCn-aFhCNRgSoJ3LfD1DiWPA"
+											<a href="https://www.youtube.com/@freecodecamp"
 												class="elementor-button-link elementor-button elementor-size-sm"
 												role="button">
 												<span class="elementor-button-content-wrapper">
@@ -1326,6 +1326,8 @@
 													</div>
 												</div>
 												<!-- TITLE END -->
+
+												
 												<!-- IMAGE CAROUSEL START -->
 												<div class="section-content">
 													<div class="row">
@@ -1472,7 +1474,7 @@
 												</div>
 											</div>
 											<div class="hilite-title text-left p-l50 text-uppercase">
-												<strong>Blog</strong>
+												<strong>Articles</strong>
 											</div>
 										</div>
 									</div>
