--- a/estate_project/templates/contact-us.html
+++ b/estate_project/templates/contact-us.html
@@ -126,7 +126,7 @@
 															<div class="icon-xs"><i class="fa fa-phone"></i></div>
 															<div class="icon-content">
 																<h5 class="m-t0">Phone number</h5>
-																<p>2347025008461</p>
+																<p>2345678910111</p>
 															</div>
 														</div>
 
@@ -134,7 +134,7 @@
 															<div class="icon-xs"><i class="fa fa-phone"></i></div>
 															<div class="icon-content">
 																<h5 class="m-t0">Phone number</h5>
-																<p>2347025008462</p>
+																<p>2345678910111</p>
 															</div>
 														</div>
 
@@ -182,8 +182,8 @@
 								<div class="elementor-custom-embed">
 									<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
 										src="https://maps.google.com/maps?q=Plot%2015%2C%20Block%2075%2C%20Ichie%20Mike%20Ejezie%20Street%2C%20Off%20Fola%20Osibo%2C%20Lekki%20Phase%201%2C%20Lagos&amp;t=m&amp;z=10&amp;output=embed&amp;iwloc=near"
-										title="Plot 15, Block 75, Ichie Mike Ejezie Street, Off Fola Osibo, Lekki Phase 1, Lagos"
-										aria-label="Plot 15, Block 75, Ichie Mike Ejezie Street, Off Fola Osibo, Lekki Phase 1, Lagos"></iframe>
+										title="Lorem ipsum address"
+										aria-label="Lorem ipsum address"></iframe>
 								</div>
 							</div>
 						</div>
