--- a/estate_project/templates/about-us.html
+++ b/estate_project/templates/about-us.html
@@ -379,17 +379,15 @@
 												<div class="our-team-2 ">
 													<div class="profile-image">
 														<img loading="lazy" width="1125" height="1132"
-															src="../wp-content/uploads/2022/10/IMG_6091.jpg"
+															src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}"
 															class="attachment-full size-full wp-post-image" alt=""
-															srcset="https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091.jpg 1125w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-298x300.jpg 298w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-1018x1024.jpg 1018w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-150x150.jpg 150w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-768x773.jpg 768w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-600x604.jpg 600w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-100x100.jpg 100w"
 															sizes="(max-width: 1125px) 100vw, 1125px" />
 														<div class="icons">
 														</div>
 													</div>
 													<div class="figcaption text-black">
 														<h4 class="m-t0"><a
-																href="../team/ayobami-akindipe/index.html">Ayobami
-																Akindipe</a></h4>
+																href="../team/ayobami-akindipe/index.html">LOREM IPSUM</a></h4>
 														<span class="m-b0">CEO</span>
 													</div>
 												</div>
@@ -400,17 +398,15 @@
 												<div class="our-team-2 ">
 													<div class="profile-image">
 														<img loading="lazy" width="1125" height="1132"
-															src="../wp-content/uploads/2022/10/IMG_6091.jpg"
+															src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}"
 															class="attachment-full size-full wp-post-image" alt=""
-															srcset="https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091.jpg 1125w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-298x300.jpg 298w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-1018x1024.jpg 1018w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-150x150.jpg 150w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-768x773.jpg 768w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-600x604.jpg 600w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-100x100.jpg 100w"
 															sizes="(max-width: 1125px) 100vw, 1125px" />
 														<div class="icons">
 														</div>
 													</div>
 													<div class="figcaption text-black">
 														<h4 class="m-t0"><a
-																href="../team/ayobami-akindipe/index.html">Ayobami
-																Akindipe</a></h4>
+																href="../team/ayobami-akindipe/index.html">LOREM IPSUM</a></h4>
 														<span class="m-b0">CEO</span>
 													</div>
 												</div>
@@ -420,17 +416,15 @@
 												<div class="our-team-2 ">
 													<div class="profile-image">
 														<img loading="lazy" width="1125" height="1132"
-															src="../wp-content/uploads/2022/10/IMG_6091.jpg"
+															src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}"
 															class="attachment-full size-full wp-post-image" alt=""
-															srcset="https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091.jpg 1125w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-298x300.jpg 298w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-1018x1024.jpg 1018w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-150x150.jpg 150w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-768x773.jpg 768w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-600x604.jpg 600w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-100x100.jpg 100w"
 															sizes="(max-width: 1125px) 100vw, 1125px" />
 														<div class="icons">
 														</div>
 													</div>
 													<div class="figcaption text-black">
 														<h4 class="m-t0"><a
-																href="../team/ayobami-akindipe/index.html">Ayobami
-																Akindipe</a></h4>
+																href="../team/ayobami-akindipe/index.html">LOREM IPSUM</a></h4>
 														<span class="m-b0">CEO</span>
 													</div>
 												</div>
@@ -440,17 +434,15 @@
 												<div class="our-team-2 ">
 													<div class="profile-image">
 														<img loading="lazy" width="1125" height="1132"
-															src="../wp-content/uploads/2022/10/IMG_6091.jpg"
+															src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}"
 															class="attachment-full size-full wp-post-image" alt=""
-															srcset="https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091.jpg 1125w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-298x300.jpg 298w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-1018x1024.jpg 1018w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-150x150.jpg 150w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-768x773.jpg 768w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-600x604.jpg 600w, https://acerealestates.ng/wp-content/uploads/2022/10/IMG_6091-100x100.jpg 100w"
 															sizes="(max-width: 1125px) 100vw, 1125px" />
 														<div class="icons">
 														</div>
 													</div>
 													<div class="figcaption text-black">
 														<h4 class="m-t0"><a
-																href="../team/ayobami-akindipe/index.html">Ayobami
-																Akindipe</a></h4>
+																href="../team/ayobami-akindipe/index.html">LOREM IPSUM</a></h4>
 														<span class="m-b0">CEO</span>
 													</div>
 												</div>
@@ -495,7 +487,7 @@
 														<div class="icon-count-2 bg-white">
 															<span class="icon-count-number">01</span>
 															<div class="icon-xl inline-icon m-b5 scale-in-center">
-																<span class="icon-cell"> <img src="../static/wp-content/uploads/2022/10/Ayobami-Akindipe-450x400.jpg" alt=""> </i></span>
+																<span class="icon-cell"> <img src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}" alt=""> </i></span>
 															</div>
 															<div class="icon-content">
 																<h4 class="sx-tilte">Partnership</h4>
@@ -514,7 +506,7 @@
 														<div class="icon-count-2 bg-white">
 															<span class="icon-count-number">02</span>
 															<div class="icon-xl inline-icon m-b5 scale-in-center">
-																<span class="icon-cell"><img src="../static/wp-content/uploads/2022/10/Ayobami-Akindipe-450x400.jpg" alt=""></i></span>
+																<span class="icon-cell"><img src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}" alt=""></i></span>
 															</div>
 															<div class="icon-content">
 																<h4 class="sx-tilte">Integrity</h4>
@@ -533,7 +525,7 @@
 														<div class="icon-count-2 bg-white">
 															<span class="icon-count-number">03</span>
 															<div class="icon-xl inline-icon m-b5 scale-in-center">
-																<span class="icon-cell"><img src="../static/wp-content/uploads/2022/10/WhatsApp-Image-2022-10-07-at-8.32.31-AM.jpg" alt=""></i></span>
+																<span class="icon-cell"><img src="{% static 'wp-content/uploads/zeranimg/aboutus/ceo01.jpg' %}" alt=""></i></span>
 															</div>
 															<div class="icon-content">
 																<h4 class="sx-tilte">Excellence</h4>
