--- a/estate_project/templates/footer.html
+++ b/estate_project/templates/footer.html
@@ -108,11 +108,11 @@
                         <h5 class="widget-title">Contact Us</h5>
                         <div class=" widget_address_outer">
                             <ul class="widget_address">
-                                <li>Plot 15, Block 75, Ichie Mike Ejezie Street, Off Fola Osibo, Lekki Phase 1, Lagos
+                                <li>Lorem ipsum address
                                 </li>
                                 <li> Hello@acerealestates.ng</li>
-                                <li>2347025008461</li>
-                                <li>2347025008462</li>
+                                <li>2345678910111</li>
+                                <li>2345678910111</li>
                             </ul>
                         </div>
                     </div>
@@ -177,8 +177,8 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            call: "2347025008461", // Call phone number
-            whatsapp: "2347025008461", // WhatsApp number
+            call: "2345678910111", // Call phone number
+            whatsapp: "2345678910111", // WhatsApp number
             call_to_action: "Message us", // Call to action
             button_color: "#FF6550", // Color of button
             position: "right", // Position may be 'right' or 'left'
@@ -801,8 +801,8 @@ var wpcf7 = { "api": { "root": "https:\/\/acerealestates.ng\/wp-json\/", "namesp
 <script type="text/javascript">
     (function () {
         var options = {
-            call: "2347025008461", // Call phone number
-            whatsapp: "2347025008461", // WhatsApp number
+            call: "2345678910111", // Call phone number
+            whatsapp: "2345678910111", // WhatsApp number
             call_to_action: "Message us", // Call to action
             button_color: "#FF6550", // Color of button
             position: "right", // Position may be 'right' or 'left'
