--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -196,7 +196,7 @@
                           margin-top: 0;
                           margin-bottom: 0;
                         ">
-												<rs-module id="rev_slider_3_1" style="" data-version="6.5.31">
+												<rs-module id="rev_slider_3_1" data-version="6.5.31">
 													<rs-slides>
 														<rs-slide style="position: absolute" data-key="rs-8"
 															data-title="Slide"
